--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-sanitizer": "^1.0.4",
+    "handlebars-helpers": "^0.10.0",
     "method-override": "^2.3.10",
     "mongojs": "^2.6.0",
     "mongoose": "^5.1.3",
