adds fix to heroku deplpoyment error

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "linkedin-jobs-scraper",
   "version": "1.0.0",
   "description": "A full stack app that scrapes linkedin for different job title postings",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
