--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "linkedin-jobs-scraper",
   "version": "1.0.0",
   "description": "A full stack app that scrapes linkedin for different job title postings",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
